--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,10 +3,7 @@ name: Rebuild NixOS
 on:
   push:
     branches:
-      - main  # or your default branch
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
+      - main
 
 permissions:
   contents: read
@@ -36,6 +33,11 @@ jobs:
         env:
           TAILSCALE_AUTHKEY: ${{ secrets.TAILSCALE_TOKEN }}
         run: |
+          # Start tailscaled daemon
+          sudo $(which tailscaled) --tun=userspace-networking --socks5-server=localhost:1055 &
+          sleep 5  # Give tailscaled time to start
+          
+          # Connect to Tailscale
           sudo $(which tailscale) up --authkey "$TAILSCALE_AUTHKEY"
           timeout 30s bash -c 'until sudo $(which tailscale) status | grep -q "Connected"; do sleep 2; done'
 
