Simplify Tailscale GitHub Action integration
- Replace manual Tailscale configuration with official GitHub Action
- Remove explicit tailscaled daemon startup steps
- Use tailscale/github-action@v3 for streamlined Tailscale connection

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,9 @@ jobs:
       - name: Connect to Tailscale
         uses: tailscale/github-action@v3
         with:
-          authkey: ${{ secrets.TAILSCALE_TOKEN }}
+          oauth-client-id: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
+          oauth-client-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
+          tags: tag:ci
 
       - name: Install nixos-rebuild
         run: nix profile install nixpkgs#nixos-rebuild
