--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,12 +27,19 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
       - name: Install Nix
         uses: cachix/install-nix-action@v25
         with:
           nix_path: nixpkgs=channel:nixos-unstable
           extra_nix_config: |
             experimental-features = nix-command flakes
+            extra-platforms = aarch64-linux
+            trusted-users = root runner
 
       - name: Connect to Tailscale
         uses: tailscale/github-action@v3
@@ -59,10 +66,10 @@ jobs:
           # Build locally to catch any errors
           nix build .#nixosConfigurations.ethernix.config.system.build.toplevel \
             --impure \
-            --option system-features kvm \
-            --system aarch64-linux \
-            --extra-platforms aarch64-linux
-          
+            --option sandbox false \
+            --option extra-platforms aarch64-linux \
+            --option system-features kvm
+
           # Then deploy if build succeeds
           nixos-rebuild switch \
             --flake .#ethernix \
