Configure cross-compilation and CI for aarch64-linux
- Add cross-system configuration in flake.nix for aarch64-linux
- Update GitHub Actions workflow to support QEMU and aarch64-linux builds
- Modify SSH deployment instructions to use specific SSH key
- Enable extra platforms and sandbox configuration for cross-compilation

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -70,8 +70,8 @@ jobs:
             --option extra-platforms aarch64-linux \
             --option system-features kvm
 
-          # Then deploy if build succeeds
-          nixos-rebuild switch \
+          # Then deploy if build succeeds - using nix run instead of nixos-rebuild
+          nix run nixpkgs#nixos-rebuild -- switch \
             --flake .#ethernix \
             --target-host "aloshy@$ETHERNIX" \
             --use-remote-sudo \
