--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Cachix
         uses: cachix/cachix-action@v15
         with:
-          name: your-cache-name  # Replace with your Cachix cache name
+          name: ethernix
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
       - name: Build
