Add nixos-rebuild to devbox packages and update Cachix cache name
- Add nixos-rebuild@latest to devbox.json packages
- Update Cachix push command to use 'ethernix' cache name in CI workflow
- Update devbox.lock with nixos-rebuild package details

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Push to Cachix
         run: |
-          cachix push your-cache-name ./result
+          cachix push ethernix ./result
 
   deploy:
     needs: build
