--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -68,12 +68,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
       - name: Install Nix
         uses: cachix/install-nix-action@v25
         with:
           nix_path: nixpkgs=channel:nixos-unstable
           extra_nix_config: |
             experimental-features = nix-command flakes
+            extra-platforms = aarch64-linux
+            trusted-users = root runner
 
       - name: Connect to Tailscale
         uses: tailscale/github-action@v3
@@ -102,4 +109,6 @@ jobs:
             --target-host "aloshy@$ETHERNIX" \
             --use-remote-sudo \
             --impure \
+            --option extra-platforms aarch64-linux \
+            --option system-features kvm \
             --show-trace
