Add runner user and update CI deployment configuration
- Add 'runner' user to NixOS configuration with wheel group access
- Modify CI workflow to use hostname-only SSH target for deployment

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -95,7 +95,7 @@ jobs:
         run: |
           nix run nixpkgs#nixos-rebuild -- switch \
             --flake .#ethernix \
-            --target-host "aloshy@$ETHERNIX" \
+            --target-host "$ETHERNIX" \
             --use-remote-sudo \
             --impure \
             --option extra-platforms aarch64-linux \
