--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -115,7 +115,8 @@ jobs:
           ACL_RESPONSE=$(curl -s -f -H "Authorization: Bearer ${ACCESS_TOKEN}" \
             "$TAILSCALE_API_URL/tailnet/-/acl" | \
             sed -e 's|//.*$||g' -e '/^\s*$/d' | \
-            tr -d '\n' | sed 's/,\s*}/}/g')
+            tr -d '\n' | \
+            sed -e 's/,\s*}/}/g' -e 's/,\s*\]/]/g')
           
           if [ $? -ne 0 ]; then
             echo "Failed to fetch ACL"
@@ -314,7 +315,8 @@ jobs:
           ACL_RESPONSE=$(curl -s -f -H "Authorization: Bearer ${ACCESS_TOKEN}" \
             "$TAILSCALE_API_URL/tailnet/-/acl" | \
             sed -e 's|//.*$||g' -e '/^\s*$/d' | \
-            tr -d '\n' | sed 's/,\s*}/}/g')
+            tr -d '\n' | \
+            sed -e 's/,\s*}/}/g' -e 's/,\s*\]/]/g')
           
           if [ $? -ne 0 ]; then
             echo "Failed to fetch ACL"
