--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -200,7 +200,7 @@ jobs:
           fi
 
           DEVICE_INFO=$(echo "$DEVICES_RESPONSE" | \
-            jq -c '.devices[] | select(.hostname=="ethernix") | {name: .name, lastSeen: .lastSeen, id: .id, tags: .tags}')
+            jq -c '.devices[] | select(.hostname=="ethernix") | {name: .name, lastSeen: .lastSeen, id: .id}')
 
           if [ -z "$DEVICE_INFO" ]; then
             echo "Error: Device 'ethernix' not found"
@@ -209,8 +209,6 @@ jobs:
 
           echo "name=$(echo "$DEVICE_INFO" | jq -r .name)" >> $GITHUB_OUTPUT
           echo "last_seen=$(echo "$DEVICE_INFO" | jq -r .lastSeen)" >> $GITHUB_OUTPUT
-          echo "device_id=$(echo "$DEVICE_INFO" | jq -r .id)" >> $GITHUB_OUTPUT
-          echo "has_ci_tag=$(echo "$DEVICE_INFO" | jq -r '.tags | contains(["tag:ci"])')" >> $GITHUB_OUTPUT
 
       - name: Check Device Online Status
         id: device-status
@@ -226,41 +224,6 @@ jobs:
             echo "Skipping deployment: Target device was last seen $DIFF seconds ago (at: ${{ steps.device-info.outputs.last_seen }})"
           fi
 
-      - name: Add CI Tag
-        if: steps.device-info.outputs.has_ci_tag == 'false'
-        env:
-          DEVICE_ID: ${{ steps.device-info.outputs.device_id }}
-        run: |
-          TOKEN_RESPONSE=$(curl -s -d "client_id=${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}" \
-                             -d "client_secret=${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}" \
-                             "$TAILSCALE_API_URL/oauth/token")
-          
-          if ! echo "$TOKEN_RESPONSE" | jq empty; then
-            echo "Invalid JSON response from token endpoint"
-            echo "Response: $TOKEN_RESPONSE"
-            exit 1
-          fi
-
-          ACCESS_TOKEN=$(echo "$TOKEN_RESPONSE" | jq -r .access_token)
-
-          if [ -z "$ACCESS_TOKEN" ]; then
-            echo "Failed to obtain access token"
-            echo "Response: $TOKEN_RESPONSE"
-            exit 1
-          fi
-
-          UPDATE_RESPONSE=$(curl -s -f -X POST \
-            -H "Authorization: Bearer ${ACCESS_TOKEN}" \
-            -H "Content-Type: application/json" \
-            -d '["tag:ci"]' \
-            "$TAILSCALE_API_URL/device/${DEVICE_ID}/tags")
-          
-          if [ $? -ne 0 ]; then
-            echo "Failed to update device tags"
-            echo "Response: $UPDATE_RESPONSE"
-            exit 1
-          fi
-
       - name: Deploy NixOS Configuration
         if: steps.device-status.outputs.online == 'true'
         env:
@@ -274,41 +237,6 @@ jobs:
             --option extra-platforms aarch64-linux \
             --option system-features kvm \
             --show-trace
-
-      - name: Cleanup CI Tag
-        if: steps.device-info.outputs.has_ci_tag == 'true'
-        env:
-          DEVICE_ID: ${{ steps.device-info.outputs.device_id }}
-        run: |
-          TOKEN_RESPONSE=$(curl -s -d "client_id=${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}" \
-                             -d "client_secret=${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}" \
-                             "$TAILSCALE_API_URL/oauth/token")
-          
-          if ! echo "$TOKEN_RESPONSE" | jq empty; then
-            echo "Invalid JSON response from token endpoint"
-            echo "Response: $TOKEN_RESPONSE"
-            exit 1
-          fi
-
-          ACCESS_TOKEN=$(echo "$TOKEN_RESPONSE" | jq -r .access_token)
-
-          if [ -z "$ACCESS_TOKEN" ]; then
-            echo "Failed to obtain access token"
-            echo "Response: $TOKEN_RESPONSE"
-            exit 1
-          fi
-
-          UPDATE_RESPONSE=$(curl -s -f -X POST \
-            -H "Authorization: Bearer ${ACCESS_TOKEN}" \
-            -H "Content-Type: application/json" \
-            -d '[]' \
-            "$TAILSCALE_API_URL/device/${DEVICE_ID}/tags")
-          
-          if [ $? -ne 0 ]; then
-            echo "Failed to update device tags"
-            echo "Response: $UPDATE_RESPONSE"
-            exit 1
-          fi
 
       - name: Cleanup SSH Access
         if: always()
