--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,9 @@
 name: Build & Deploy NixOS
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches:
@@ -59,7 +63,10 @@ jobs:
 
       - name: Push to Cachix
         run: |
-          cachix push ethernix ./result
+          if ! cachix push ethernix ./result; then
+            echo "Failed to push to Cachix"
+            exit 1
+          fi
 
   deploy:
     timeout-minutes: 15
@@ -204,11 +211,18 @@ jobs:
         env:
           TARGET_HOST: ${{ steps.device-info.outputs.name }}
         run: |
-          nix run nixpkgs#nixos-rebuild -- switch \
-            --flake .#ethernix \
-            --target-host "$TARGET_HOST" \
-            --use-remote-sudo \
-            --impure \
-            --option extra-platforms aarch64-linux \
-            --option system-features kvm \
-            --show-trace
+          for i in {1..3}; do
+            if nix run nixpkgs#nixos-rebuild -- switch \
+              --flake .#ethernix \
+              --target-host "$TARGET_HOST" \
+              --use-remote-sudo \
+              --impure \
+              --option extra-platforms aarch64-linux \
+              --option system-features kvm \
+              --show-trace; then
+              exit 0
+            fi
+            echo "Attempt $i failed, retrying..."
+            sleep 10
+          done
+          exit 1
