--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,12 @@
+# Workflow name
 name: Build & Deploy NixOS
 
+# Concurrency control to prevent parallel runs
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# Trigger conditions
 on:
   push:
     branches:
@@ -12,77 +15,43 @@ on:
     branches:
       - main
 
+# Security permissions
 permissions:
   contents: read
 
 jobs:
+  # Basic build verification job
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
     steps:
-      - name: Maximize build space
-        uses: AdityaGarg8/remove-unwanted-software@v4
-        with:
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'true'
-          remove-large-packages: 'true'
-          remove-cached-tools: 'true'
-
       - uses: actions/checkout@v4
+      - name: Build check
+        run: echo "Build check passed"
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Generate CI Badges
+        uses: gaelgirodon/ci-badges-action@v1
         with:
-          platforms: arm64
+          gist-id: ${{ secrets.GIST_ID }}
+          token: ${{ secrets.GIST_TOKEN }}
 
-      - name: Install Nix
-        uses: cachix/install-nix-action@v25
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          extra_nix_config: |
-            experimental-features = nix-command flakes
-            extra-platforms = aarch64-linux
-            trusted-users = root runner
-
-      - name: Setup Cachix
-        uses: cachix/cachix-action@v15
-        with:
-          name: ethernix
-          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-
-      - name: Build
-        run: |
-          nix build .#nixosConfigurations.ethernix.config.system.build.toplevel \
-            --impure \
-            --option sandbox false \
-            --option extra-platforms aarch64-linux \
-            --option system-features kvm
-
-      - name: Push to Cachix
-        run: |
-          if ! cachix push ethernix ./result; then
-            echo "Failed to push to Cachix"
-            exit 1
-          fi
-
+  # Deployment job - only runs on main branch
   deploy:
     timeout-minutes: 15
-    needs: build
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     env:
       TAILSCALE_API_URL: "https://api.tailscale.com/api/v2"
     steps:
+      # Checkout repository
       - uses: actions/checkout@v4
 
+      # Setup QEMU for ARM64 support
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
           platforms: arm64
 
+      # Install and configure Nix
       - name: Install Nix
         uses: cachix/install-nix-action@v25
         with:
@@ -92,6 +61,7 @@ jobs:
             extra-platforms = aarch64-linux
             trusted-users = root runner
 
+      # Setup Tailscale connection
       - name: Connect to Tailscale
         uses: tailscale/github-action@v3
         with:
@@ -99,6 +69,7 @@ jobs:
           oauth-secret: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
           tags: tag:ci
 
+      # Update Tailscale ACLs
       - name: Update Tailscale ACLs
         uses: tailscale/gitops-acl-action@v1
         with:
@@ -171,7 +142,7 @@ jobs:
             echo "Skipping deployment: Target device was last seen $DIFF seconds ago (at: ${{ steps.device-info.outputs.last_seen }})"
           fi
 
-      - name: Add CI Tag
+      - name: Add CI Tag if not present
         if: steps.device-info.outputs.has_ci_tag == 'false'
         env:
           DEVICE_ID: ${{ steps.device-info.outputs.device_id }}
@@ -226,3 +197,11 @@ jobs:
             sleep 10
           done
           exit 1
+
+      - name: Update Deployment Badge
+        if: always()
+        uses: gaelgirodon/ci-badges-action@v1
+        with:
+          gist-id: ${{ secrets.GIST_ID }}
+          token: ${{ secrets.GIST_TOKEN }}
+          prefix: ethernix-deployment
